--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Cadastro de Usuário</title>
+        <title>Projeto 07</title>
     </head>
     <body>
         <header>
@@ -53,4 +53,5 @@
         </form>
         <footer><p>© 2025 Meu Site Pessoal</p></footer>
     </body>
+
 </html>
